--- a/mall-web/src/main/webapp/login.html
+++ b/mall-web/src/main/webapp/login.html
@@ -30,13 +30,13 @@
 					<p class=" text-center margin-small-top logo-color text-small">
 						4396网游交易平台
 					</p>
-					<form class="login-form" action="table.html" method="post" autocomplete="off">
+					<form class="login-form" action="/login" method="post" autocomplete="off">
 						<div class="login-box border text-small" id="box">
 							<div class="name border-bottom">
-								<input type="text" placeholder="手机 / 邮箱 / 某某账号" id="username" name="username" datatype="*" nullmsg="请填写帐号信息">
+								<input type="text" placeholder="手机 / 邮箱 / 某某账号" id="username" name="loginName" datatype="*" nullmsg="请填写帐号信息">
 							</div>
 							<div class="pwd">
-								<input type="password" placeholder="密码" datatype="*" id="password" name="password" nullmsg="请填写帐号密码">
+								<input type="password" placeholder="密码" datatype="*" id="password" name="loginPwd" nullmsg="请填写帐号密码">
 							</div>
 						</div>
 						<input type="hidden" name="formhash" value="5abb5d21"/>
