--- a/mall-web/src/main/webapp/register.html
+++ b/mall-web/src/main/webapp/register.html
@@ -63,7 +63,7 @@
 				<h6 class="padding-left manage-head-con">新用户注册</h6>
 			</div>
 
-			<form name="setp0" action="#" method="post" autocomplete="off">
+			<form name="setp0" action="/register" method="post" autocomplete="off">
 				<div class="basic-info-detail clearfix">
 
 					<div class="unit-style padding-big-lr clearfix">
@@ -82,8 +82,8 @@
 							</p>
 							<div class="content-right-zoon">
 								<select class="width-main select " name="sex">
-									<option value="sex1">男</option>
-									<option value="sex2">女</option>
+									<option value="sex">男</option>
+									<option value="sex">女</option>
 								</select>
 							</div>
 						</div>
