将之前的html改成了jsp可以动态获取登陆者的登录名

--- a/mall-web/src/main/webapp/register.html
+++ b/mall-web/src/main/webapp/register.html
@@ -38,7 +38,7 @@
 			<li class="fl topbar-info-item">
 				<div class="dropdown">
 					<a href="#" class="topbar-btn">
-						<span class="fl text-normal">小朱</span>
+						<span class="fl text-normal">注册</span>
 						<span class="icon-arrow-down"></span>
 					</a>
 					<ul class="dropdown-menu">
