根据角色id跳转页面

--- a/mall-web/src/main/webapp/register.html
+++ b/mall-web/src/main/webapp/register.html
@@ -82,8 +82,8 @@
 							</p>
 							<div class="content-right-zoon">
 								<select class="width-main select " name="sex">
-									<option value="sex">男</option>
-									<option value="sex">女</option>
+									<option value="男">男</option>
+									<option value="女">女</option>
 								</select>
 							</div>
 						</div>
@@ -157,9 +157,9 @@
 							</p>
 							<div class="content-right-zoon">
 								<select class="width-main select " name="question">
-									<option value="q1">您的生日</option>
-									<option value="q2">您的真名</option>
-									<option value="q3">您爱人的名字</option>
+									<option value="您的生日">您的生日</option>
+									<option value="您的真名">您的真名</option>
+									<option value="您爱人的名字">您爱人的名字</option>
 								</select>
 							</div>
 						</div>
