--- a/mall-web/src/main/webapp/login.html
+++ b/mall-web/src/main/webapp/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-		<title>深圳合众艾特</title>
+		<title>4396，永不团灭</title>
 		<meta name="keywords" content="深圳合众艾特" />
 		<meta name="description" content="深圳合众艾特" />
 		<link href="Css/layout.css" rel="stylesheet" type="text/css">
